smal change to sidebar

--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@
       </nav>
     </header>
     <div
-      class="sidebar col col-2 m-2 rounded align-items-md-center justify-content-md-center"
+      class="sidebar col d-flex flex-column col-2 m-2 rounded align-items-md-center justify-content-md-center"
     >
       <p class="m-2">username</p>
       <h2 class="m-2">credits</h2>
       <p>ammount</p>
       <p>my bids</p>
     </div>
+    <div class="listings"></div>
   </body>
 </html>
