--- a/login.html
+++ b/login.html
@@ -39,9 +39,7 @@
           </ul>
         </div>
         <button type="button" class="btn btn-secondary btn-sm">PROFILE</button>
-        <button type="button" class="btn btn-primary btn-sm m-2" id="nav_login">
-          LOGIN
-        </button>
+        <button type="button" class="btn btn-primary btn-sm m-2">LOGIN</button>
       </nav>
     </header>
     <div class="row">
@@ -54,21 +52,52 @@
         <p>my bids</p>
       </div>
       <div class="middle col-9 m-6">
-        <nav class="navbar navbar-light bg-light">
-          <a class="navbar-brand">Navbar</a>
-          <form class="form-inline">
-            <input
-              class="form-control mr-sm-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-              Search
-            </button>
+        <div
+          class="register col-9 m-2 d-flex justify-content-center align-items-center"
+        >
+          <form id="login_form">
+            <div
+              class="mb-3 d-flex flex-column justify-content-center align-items-center"
+            >
+              <h1>please login</h1>
+              <div
+                class="d-flex my-3 col-4 align-items-center justify-content-center"
+              >
+                <input
+                  type="email"
+                  name="email"
+                  class="form-control"
+                  id="exampleInputEmail1"
+                  aria-describedby="emailHelp"
+                  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+                  placeholder="Email"
+                  required
+                />
+              </div>
+              <p class="my-1">password must be at least 8 characters long</p>
+              <div class="d-flex my-1 col-4">
+                <input
+                  type="password"
+                  name="password"
+                  class="form-control"
+                  id="exampleInputPassword1"
+                  minlength="8"
+                  aria-describedby="passwordHelp"
+                  placeholder="password"
+                  required
+                />
+              </div>
+              <div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+                <a href="./register.html"
+                  ><button type="button" class="btn btn-outline-primary">
+                    Register
+                  </button></a
+                >
+              </div>
+            </div>
           </form>
-        </nav>
-        <div class="listings col-9 row m-6"></div>
+        </div>
       </div>
     </div>
   </body>
