--- a/index.html
+++ b/index.html
@@ -39,9 +39,15 @@
           </ul>
         </div>
         <button type="button" class="btn btn-secondary btn-sm">PROFILE</button>
-        <button type="button" class="btn btn-primary btn-sm m-2" id="nav_login">
-          LOGIN
-        </button>
+        <a href="./login.html">
+          <button
+            type="button"
+            class="btn btn-primary btn-sm m-2"
+            id="nav_login"
+          >
+            LOGIN
+          </button>
+        </a>
       </nav>
     </header>
     <div class="row">
