bid functionality near complete

--- a/singleItem.html
+++ b/singleItem.html
@@ -80,6 +80,8 @@
           </form>
         </nav>
         <div class="listings col-9 row m-6"></div>
+        <h3 class="m-3">Place a bid on this item</h3>
+        <div class="m-4"><form id="bidForm"><input name="amount" type="number" placeholder="1"></input><button type="submit" class="btn btn-lg btn-primary">Bid</button></form></div>
       </div>
     </div>
   </body>
