work on bid functionality

--- a/singleItem.html
+++ b/singleItem.html
@@ -79,9 +79,14 @@
             </button>
           </form>
         </nav>
-        <div class="listings col-9 row m-6"></div>
-        <h3 class="m-3">Place a bid on this item</h3>
-        <div class="m-4"><form id="bidForm"><input name="amount" type="number" placeholder="1"></input><button type="submit" class="btn btn-lg btn-primary">Bid</button></form></div>
+        <div class="media"></div>
+        <div class="listings col-9 m-6 d-flex justify-content-center"></div>
+        <div class="bid col-9 d-flex justify-content-center">
+            <div">
+            <h3 class="m-3">Place a bid on this item</h3>
+            <div class="m-4"><form id="bidForm"><input class="bidInput" name="amount" type="number"></input><button type="submit" class="btn btn-lg btn-primary">Bid</button></form></div>
+        </div>
+        </div>
       </div>
     </div>
   </body>
