bid log added to singleitem

--- a/singleItem.html
+++ b/singleItem.html
@@ -85,6 +85,8 @@
             <div">
             <h3 class="m-3">Place a bid on this item</h3>
             <div class="m-4"><form id="bidForm"><input class="bidInput" name="amount" type="number"></input><button type="submit" class="btn btn-lg btn-primary">Bid</button></form></div>
+            <h4>Biding Log</h4>
+            <div><ul class="bidsContainer"></ul></div>
         </div>
         </div>
       </div>
