added search functionality

--- a/index.html
+++ b/index.html
@@ -67,10 +67,11 @@
               New entry
             </button></a
           >
-          <form class="form-inline">
+          <form class="form-inline" id="searchForm">
             <input
               class="form-control mr-sm-2"
               type="search"
+              id="searchInput"
               placeholder="Search"
               aria-label="Search"
             />
