fixing links, bugs and design

--- a/profile.html
+++ b/profile.html
@@ -38,47 +38,39 @@
             </li>
           </ul>
         </div>
-        <button type="button" class="btn btn-secondary btn-sm">PROFILE</button>
-        <button type="button" class="btn btn-primary btn-sm m-2">LOGIN</button>
+        <a href="./profile.html">
+          <button
+            type="button"
+            class="btn btn-secondary btn-sm"
+            id="nav_profile"
+          >
+            PROFILE
+          </button>
+        </a>
+        <a href="./login.html">
+          <button
+            type="button"
+            class="btn btn-primary btn-sm m-2"
+            id="nav_login"
+          >
+            LOGIN
+          </button>
+        </a>
       </nav>
     </header>
-    <div class="row">
-      <div
-        class="sidebar col d-flex flex-column col-2 m-2 rounded align-items-md-center"
-      >
-        <p class="m-2">username</p>
-        <h2 class="m-2">credits</h2>
-        <p>ammount</p>
-        <p>my bids</p>
-      </div>
-      <div class="middle col-9 m-6">
+    <div class="d-flex justify-content-center align-items-center">
+      <div class="col-9 col m-6">
         <div
-          class="register col-9 m-2 d-flex justify-content-center align-items-center"
+          class="d-flex flex-column align-items-center justify-content-center"
         >
-          <form class="reatePost" id="updateItem">
-            <div class="container d-flex flex-column front-form my-3">
-              <h1 class="text-center">Write a new post</h1>
-              <label for="subject" class="form-label">Title</label>
-              <input
-                type="text"
-                name="title"
-                class="form-control form-title"
-                id="exampleInputEmail1"
-                aria-describedby="emailHelp"
-              />
-              <label for="description" class="form-label">Description</label>
-              <textarea
-                name="description"
-                id="message"
-                cols="30"
-                rows="10"
-                class="form__input form-body text_area mb-3"
-                placeholder="message"
-              ></textarea>
-              <button type="submit" class="btn mb-3 btn-primary">Submit</button>
-            </div>
-          </form>
+          <h1 class="usernameHolder">username</h1>
+          <img src="" alt="profile-image" />
+          <p>email:</p>
+          <p class="emailHolder">placeholder</p>
+          <p>credits:</p>
+          <p class="creditsHolder">placeholder</p>
         </div>
+        <div class="listings col-9 row m-6"></div>
       </div>
     </div>
   </body>
