--- a/createItem.html
+++ b/createItem.html
@@ -38,19 +38,27 @@
             </li>
           </ul>
         </div>
-        <button type="button" class="btn btn-secondary btn-sm">PROFILE</button>
-        <button type="button" class="btn btn-primary btn-sm m-2">LOGIN</button>
+        <a href="./profile.html">
+          <button
+            type="button"
+            class="btn btn-secondary btn-sm"
+            id="nav_profile"
+          >
+            PROFILE
+          </button>
+        </a>
+        <a href="./login.html"
+          ><button
+            type="button"
+            class="btn btn-primary btn-sm m-2"
+            id="nav_login"
+          >
+            LOGIN
+          </button></a
+        >
       </nav>
     </header>
-    <div class="row">
-      <div
-        class="sidebar col d-flex flex-column col-2 m-2 rounded align-items-md-center"
-      >
-        <p class="m-2">username</p>
-        <h2 class="m-2">credits</h2>
-        <p>ammount</p>
-        <p>my bids</p>
-      </div>
+    <div class="d-flex justify-content-center align-items-center">
       <div class="middle col-9 m-6">
         <div
           class="register col-9 m-2 d-flex justify-content-center align-items-center"
