--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Auction-bay</a>
+        <a class="navbar-brand" href="index.html">Auction-bay</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -38,7 +38,15 @@
             </li>
           </ul>
         </div>
-        <button type="button" class="btn btn-secondary btn-sm">PROFILE</button>
+        <a href="./profile.html">
+          <button
+            type="button"
+            class="btn btn-secondary btn-sm"
+            id="nav_profile"
+          >
+            PROFILE
+          </button>
+        </a>
         <a href="./login.html">
           <button
             type="button"
@@ -50,15 +58,7 @@
         </a>
       </nav>
     </header>
-    <div class="row">
-      <div
-        class="sidebar col d-flex flex-column col-2 m-2 rounded align-items-md-center"
-      >
-        <p class="m-2">username</p>
-        <h2 class="m-2">credits</h2>
-        <p>ammount</p>
-        <p>my bids</p>
-      </div>
+    <div class="d-flex justify-content-center align-items-center">
       <div class="middle col-9 m-6">
         <nav class="navbar navbar-light bg-light">
           <a class="navbar-brand">Listings Menu</a>
@@ -80,7 +80,7 @@
             </button>
           </form>
         </nav>
-        <div class="listings col-9 row m-6"></div>
+        <div class="listings col-9 d-flex flex-wrap m-6"></div>
       </div>
     </div>
   </body>
