--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Auction-bay</a>
+        <a class="navbar-brand" href="index.html">Auction-bay</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -38,66 +38,72 @@
             </li>
           </ul>
         </div>
-        <button type="button" class="btn btn-secondary btn-sm">PROFILE</button>
-        <button type="button" class="btn btn-primary btn-sm m-2">LOGIN</button>
+        <a href="./profile.html">
+          <button
+            type="button"
+            class="btn btn-secondary btn-sm"
+            id="nav_profile"
+          >
+            PROFILE
+          </button>
+        </a>
+        <a href="./login.html"
+          ><button
+            type="button"
+            class="btn btn-primary btn-sm m-2"
+            id="nav_login"
+          >
+            LOGIN
+          </button></a
+        >
       </nav>
     </header>
-    <div class="row">
+    <div class="d-flex justify-content-center align-items-center">
       <div
-        class="sidebar col d-flex flex-column col-2 m-2 rounded align-items-md-center"
+        class="register col-9 m-2 d-flex justify-content-center align-items-center"
       >
-        <p class="m-2">username</p>
-        <h2 class="m-2">credits</h2>
-        <p>ammount</p>
-        <p>my bids</p>
-      </div>
-      <div class="middle col-9 m-6">
-        <div
-          class="register col-9 m-2 d-flex justify-content-center align-items-center"
-        >
-          <form id="login_form">
+        <form id="login_form">
+          <div
+            class="mb-3 d-flex flex-column justify-content-center align-items-center"
+          >
+            <h1>please login</h1>
             <div
-              class="mb-3 d-flex flex-column justify-content-center align-items-center"
+              class="d-flex my-3 col-4 align-items-center justify-content-center"
             >
-              <h1>please login</h1>
-              <div
-                class="d-flex my-3 col-4 align-items-center justify-content-center"
-              >
-                <input
-                  type="email"
-                  name="email"
-                  class="form-control"
-                  id="exampleInputEmail1"
-                  aria-describedby="emailHelp"
-                  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
-                  placeholder="Email"
-                  required
-                />
-              </div>
-              <p class="my-1">password must be at least 8 characters long</p>
-              <div class="d-flex my-1 col-4">
-                <input
-                  type="password"
-                  name="password"
-                  class="form-control"
-                  id="exampleInputPassword1"
-                  minlength="8"
-                  aria-describedby="passwordHelp"
-                  placeholder="password"
-                  required
-                />
-              </div>
-              <div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-                <a href="./register.html"
-                  ><button type="button" class="btn btn-outline-primary">
-                    Register
-                  </button></a
-                >
-              </div>
+              <input
+                type="email"
+                name="email"
+                class="form-control"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+                placeholder="Email"
+                required
+              />
             </div>
-          </form>
-        </div>
+            <p class="my-1">password must be at least 8 characters long</p>
+            <div class="d-flex my-1 col-4">
+              <input
+                type="password"
+                name="password"
+                class="form-control"
+                id="exampleInputPassword1"
+                minlength="8"
+                aria-describedby="passwordHelp"
+                placeholder="password"
+                required
+              />
+            </div>
+            <div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+              <a href="./register.html"
+                ><button type="button" class="btn btn-outline-primary">
+                  Register
+                </button></a
+              >
+            </div>
+          </div>
+        </form>
       </div>
     </div>
   </body>
