--- a/singleItem.html
+++ b/singleItem.html
@@ -51,22 +51,26 @@
       </nav>
     </header>
     <main>
-      <div class="container">
-        <div class="d-flex justify-content-center align-items-center">
-          <div class="middle middle_singleItem row m-6">
-            <div class="col-sm media"></div>
-            <div class="listings col-sm m-6 d-flex justify-content-center"></div>
-            <div class="bid col-sm d-flex justify-content-center">
-                <div">
-                <h3 class="m-3">Place a bid on this item</h3>
-                <div class="m-4"><form id="bidForm"><input class="bidInput" name="amount" type="number"></input><button type="submit" class="btn btn-lg btn-primary">Bid</button></form></div>
-                <h4>Biding Log</h4>
-                <div><ul class="bidsContainer"></ul></div>
-            </div>
-            </div>
+      <div class="container col-13 d-flex flex-column justify-content-center align-items-center">
+          <div class="bid register col-13 d-flex flex-column justify-content-center align-items-center">
+              <div class="listingsAndBids">
+                <div class="listings col-sm-5 col-md-5 col-lg-5"></div>
+                <div class="bidAndLog col-sm-5 col-md-5 col-lg-5">
+                  <div class="bid d-flex flex-column justify-content-center align-items-center">
+                    <h3 class="">Place a bid on this item</h3>
+                    <div class="d-flex flex-column justify-content-center align-items-center">
+                      <form id="bidForm "><input class="bidInput" name="amount" type="number"></input><button type="submit" class="btn btn-lg btn-primary">Bid</button></form>
+                    </div>
+                  </div>
+                  <div class="bidsLog">
+                    <h4>Biding Log</h4>
+                  <div><ul class="bidsContainer"></ul></div>
+                  </div>
+                </div>
+              </div>
           </div>
-        </div>
       </div>
+      <div class="media d-flex flex-wrap justify-content-center align-items-center"></div>
     </main>
   </body>
 </html>
