working on layout on the single item page ,2

--- a/singleItem.html
+++ b/singleItem.html
@@ -51,11 +51,11 @@
       </nav>
     </header>
     <main>
-      <div class="container col-13 d-flex flex-column justify-content-center align-items-center">
-          <div class="bid register col-13 d-flex flex-column justify-content-center align-items-center">
+      <div class="container d-flex flex-column justify-content-center align-items-center">
+          <div class="bid register d-flex flex-column justify-content-center align-items-center">
               <div class="listingsAndBids">
-                <div class="listings col-sm-5 col-md-5 col-lg-5"></div>
-                <div class="bidAndLog col-sm-5 col-md-5 col-lg-5">
+                <div class="listings"></div>
+                <div class="bidAndLog text-center">
                   <div class="bid d-flex flex-column justify-content-center align-items-center">
                     <h3 class="">Place a bid on this item</h3>
                     <div class="d-flex flex-column justify-content-center align-items-center">
