making update avatar functionality and fixing some bugs

--- a/profile.html
+++ b/profile.html
@@ -64,7 +64,12 @@
           class="d-flex flex-column align-items-center justify-content-center"
         >
           <h1 class="usernameHolder">username</h1>
-          <img src="" alt="profile-image" />
+          <img class="profileImage" src="" alt="profile-image" />
+          <h2>Update profile avatar</h2>
+          <form id="updateProfileForm">
+            <input type="url" name="avatar" />
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
           <p>email:</p>
           <p class="emailHolder">placeholder</p>
           <p>credits:</p>
