styling and fixing some bugs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">Auction-bay</a>
+        <a class="navbar-brand m-1" href="index.html"
+          ><h1 class="logo">Auction-bay</h1></a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -58,8 +60,8 @@
         </a>
       </nav>
     </header>
-    <div class="d-flex justify-content-center align-items-center">
-      <div class="middle col-9 m-6">
+    <main>
+      <div class="container">
         <nav class="navbar navbar-light bg-light">
           <a class="navbar-brand">Listings Menu</a>
           <a href="createItem.html"
@@ -80,8 +82,8 @@
             </button>
           </form>
         </nav>
-        <div class="listings col-9 d-flex flex-wrap m-6"></div>
+        <div class="listings d-flex align-items-center flex-wrap m-6"></div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
