--- a/updateItem.html
+++ b/updateItem.html
@@ -58,16 +58,8 @@
         >
       </nav>
     </header>
-    <div class="row">
-      <div
-        class="sidebar col d-flex flex-column col-2 m-2 rounded align-items-md-center"
-      >
-        <p class="m-2">username</p>
-        <h2 class="m-2">credits</h2>
-        <p>ammount</p>
-        <p>my bids</p>
-      </div>
-      <div class="middle col-9 m-6">
+    <main>
+      <div class="container d-flex justify-content-center align-items-center">
         <div
           class="register col-9 m-2 d-flex justify-content-center align-items-center"
         >
@@ -96,6 +88,6 @@
           </form>
         </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
