--- a/login.html
+++ b/login.html
@@ -58,53 +58,57 @@
         >
       </nav>
     </header>
-    <div class="d-flex justify-content-center align-items-center">
-      <div
-        class="register col-9 m-2 d-flex justify-content-center align-items-center"
-      >
-        <form id="login_form">
-          <div
-            class="mb-3 d-flex flex-column justify-content-center align-items-center"
-          >
-            <h1>please login</h1>
+    <main>
+      <div class="d-flex justify-content-center align-items-center">
+        <div
+          class="register m-2 d-flex justify-content-center align-items-center"
+        >
+          <form id="login_form">
             <div
-              class="d-flex my-3 col-4 align-items-center justify-content-center"
+              class="mb-3 d-flex flex-column justify-content-center align-items-center"
             >
-              <input
-                type="email"
-                name="email"
-                class="form-control"
-                id="exampleInputEmail1"
-                aria-describedby="emailHelp"
-                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
-                placeholder="Email"
-                required
-              />
-            </div>
-            <p class="my-1">password must be at least 8 characters long</p>
-            <div class="d-flex my-1 col-4">
-              <input
-                type="password"
-                name="password"
-                class="form-control"
-                id="exampleInputPassword1"
-                minlength="8"
-                aria-describedby="passwordHelp"
-                placeholder="password"
-                required
-              />
-            </div>
-            <div>
-              <button type="submit" class="btn btn-primary">Submit</button>
-              <a href="./register.html"
-                ><button type="button" class="btn btn-outline-primary">
-                  Register
-                </button></a
+              <h1>please login</h1>
+              <div
+                class="d-flex my-3 col-7 align-items-center justify-content-center"
               >
+                <input
+                  type="email"
+                  name="email"
+                  class="form-control"
+                  id="exampleInputEmail1"
+                  aria-describedby="emailHelp"
+                  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+                  placeholder="Email"
+                  required
+                />
+              </div>
+              <p class="my-1 text-center">
+                password must be at least 8 characters long
+              </p>
+              <div class="d-flex my-1 col-7">
+                <input
+                  type="password"
+                  name="password"
+                  class="form-control"
+                  id="exampleInputPassword1"
+                  minlength="8"
+                  aria-describedby="passwordHelp"
+                  placeholder="password"
+                  required
+                />
+              </div>
+              <div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+                <a href="./register.html"
+                  ><button type="button" class="btn btn-outline-primary">
+                    Register
+                  </button></a
+                >
+              </div>
             </div>
-          </div>
-        </form>
+          </form>
+        </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
