--- a/register.html
+++ b/register.html
@@ -58,71 +58,76 @@
         >
       </nav>
     </header>
-    <div class="d-flex justify-content-center align-items-center">
-      <div
-        class="register col-9 m-2 d-flex justify-content-center align-items-center"
-      >
-        <form action="./profile.html" id="register_form" method="post">
-          <div class="mb-3 d-flex flex-column o-center" style="height: 80vh">
-            <h1>Please register</h1>
-            <p class="my-1">username must be at least 8 characters long</p>
+    <main>
+      <div class="d-flex justify-content-center align-items-center">
+        <div
+          class="register col-9 m-2 d-flex justify-content-center align-items-center"
+        >
+          <form action="./profile.html" id="register_form" method="post">
             <div
-              class="d-flex my-3 align-items-center justify-content-center"
-              style="width: 50%"
+              class="mb-3 d-flex text-center flex-column align-items-center"
+              style="height: 80vh"
             >
-              <input
-                type="name"
-                name="name"
-                pattern="^[\w]+$"
-                title="User name must only contain lower case and upper case letters, numbers and underscore (_). Example: My_user123. The username must also be at least 8 characters long."
-                class="form-control register_username"
-                id="exampleUserName"
-                aria-describedby="emailHelp"
-                minlength="8"
-                placeholder="username"
-                required
-              />
+              <h1>Please register</h1>
+              <p class="my-1">username must be at least 8 characters long</p>
+              <div
+                class="d-flex my-3 align-items-center justify-content-center"
+                style="width: 50%"
+              >
+                <input
+                  type="name"
+                  name="name"
+                  pattern="^[\w]+$"
+                  title="User name must only contain lower case and upper case letters, numbers and underscore (_). Example: My_user123. The username must also be at least 8 characters long."
+                  class="form-control register_username"
+                  id="exampleUserName"
+                  aria-describedby="emailHelp"
+                  minlength="8"
+                  placeholder="username"
+                  required
+                />
+              </div>
+              <p class="my-1">
+                email must be a valid noroff student mail address
+              </p>
+              <div
+                class="d-flex my-3 align-items-center justify-content-center"
+                style="width: 50%"
+              >
+                <input
+                  type="email"
+                  name="email"
+                  class="form-control register_email"
+                  id="exampleInputEmail1"
+                  aria-describedby="emailHelp"
+                  pattern="^[\w\-.]+@(stud.)?noroff.no$"
+                  title="Only @(stud)noroff.no are allowed to register."
+                  placeholder="Email"
+                  required
+                />
+              </div>
+              <p class="my-1">password must be at least 8 characters long</p>
+              <div class="d-flex my-1" style="width: 50%">
+                <input
+                  type="password"
+                  name="password"
+                  class="form-control register_password"
+                  id="exampleInputPassword1"
+                  minlength="8"
+                  aria-describedby="passwordHelp"
+                  placeholder="password"
+                  required
+                />
+              </div>
+              <div>
+                <button type="submit" class="btn btn-primary register_submit">
+                  Submit
+                </button>
+              </div>
             </div>
-            <p class="my-1">
-              email must be a valid noroff student mail address
-            </p>
-            <div
-              class="d-flex my-3 align-items-center justify-content-center"
-              style="width: 50%"
-            >
-              <input
-                type="email"
-                name="email"
-                class="form-control register_email"
-                id="exampleInputEmail1"
-                aria-describedby="emailHelp"
-                pattern="^[\w\-.]+@(stud.)?noroff.no$"
-                title="Only @(stud)noroff.no are allowed to register."
-                placeholder="Email"
-                required
-              />
-            </div>
-            <p class="my-1">password must be at least 8 characters long</p>
-            <div class="d-flex my-1" style="width: 50%">
-              <input
-                type="password"
-                name="password"
-                class="form-control register_password"
-                id="exampleInputPassword1"
-                minlength="8"
-                aria-describedby="passwordHelp"
-                placeholder="password"
-                required
-              />
-            </div>
-            <div>
-              <button type="submit" class="btn btn-primary register_submit">
-                Submit
-              </button>
-            </div>
-          </div>
-        </form>
+          </form>
+        </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
