--- a/singleItem.html
+++ b/singleItem.html
@@ -51,24 +51,22 @@
       </nav>
     </header>
     <main>
-      <div class="container d-flex flex-column justify-content-center align-items-center">
-          <div class="bid register d-flex flex-column justify-content-center align-items-center">
-              <div class="listingsAndBids">
-                <div class="listings"></div>
-                <div class="bidAndLog text-center">
-                  <div class="bid d-flex flex-column justify-content-center align-items-center">
-                    <h3 class="">Place a bid on this item</h3>
-                    <div class="d-flex flex-column justify-content-center align-items-center">
-                      <form id="bidForm"><input class="bidInput" name="amount" type="number"></input><button type="submit" class="btn btn-lg btn-primary">Bid</button></form>
-                    </div>
-                  </div>
-                  <div class="bidsLog">
-                    <h4>Biding Log</h4>
-                  <div><ul class="bidsContainer"></ul></div>
-                  </div>
-                </div>
+      <div class="container mx-auto bid register">
+        <div class="mx-auto listingsAndBids">
+          <div class="listings"></div>
+          <div class="bidAndLog text-center">
+            <div class="bid d-flex flex-column justify-content-center align-items-center">
+              <h3 class="">Place a bid on this item</h3>
+              <div class="d-flex flex-column justify-content-center align-items-center">
+                <form id="bidForm"><input class="bidInput" name="amount" type="number"></input><button type="submit" class="btn btn-lg btn-primary">Bid</button></form>
               </div>
+            </div>
+            <div class="bidsLog">
+              <h4>Biding Log</h4>
+            <div><ul class="bidsContainer"></ul></div>
+            </div>
           </div>
+        </div>
       </div>
       <div class="media d-flex flex-wrap justify-content-center align-items-center"></div>
     </main>
