--- a/profile.html
+++ b/profile.html
@@ -11,32 +11,13 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">Auction-bay</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
+        <a class="navbar-brand m-1" href="index.html"
+          ><h1 class="logo">Auction-bay</h1></a
         >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#"
-                >Home <span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-          </ul>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown"></div>
+        <div class="nav-credits d-flex">
+          <h2 class="credit">credits:</h2>
+          <h3 class="creditsHolder credit"></h3>
         </div>
         <a href="./profile.html">
           <button
@@ -83,7 +64,8 @@
           <p class="creditsHolder">placeholder</p>
         </div>
       </div>
-      <div class="listings container m-6"></div>
+      <h3 class="text-center">your winning bids (click to view):</h3>
+      <div class="listings container m-2 mx-auto"></div>
     </main>
   </body>
 </html>
