--- a/index.html
+++ b/index.html
@@ -14,31 +14,10 @@
         <a class="navbar-brand m-1" href="index.html"
           ><h1 class="logo">Auction-bay</h1></a
         >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#"
-                >Home <span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-          </ul>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown"></div>
+        <div class="nav-credits d-flex">
+          <h2 class="credit">credits:</h2>
+          <h3 class="creditsHolder credit"></h3>
         </div>
         <a href="./profile.html">
           <button
