adds footer and load more button on index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,31 @@
           </form>
         </nav>
         <div class="listings d-flex align-items-center flex-wrap m-6"></div>
+        <div class="load-button d-flex justify-content-center m-2">
+          <button class="btn btn-primary" id="loadMore">
+            Load more results
+          </button>
+        </div>
       </div>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="about text-center">
+            <h5>About</h5>
+            <p>
+              register with your noroff student mail today and get 1000 credits
+              to bid on items. or put something up for auction.
+            </p>
+          </div>
+          <div class="contact text-center">
+            <h5>contact</h5>
+            <p>support@fake-auction.se</p>
+            <p>phone: 555-40-FAKE</p>
+          </div>
+        </div>
+        <p class="copyright text-center m-1">Copyright © 2022 Auction-bay</p>
+      </div>
+    </footer>
   </body>
 </html>
