adds footer on all pages and lots of minor changes on js files

--- a/login.html
+++ b/login.html
@@ -42,11 +42,12 @@
     <main>
       <div class="d-flex justify-content-center align-items-center">
         <div
-          class="register m-2 d-flex justify-content-center align-items-center"
+          class="register container m-2 d-flex justify-content-center align-items-center"
         >
           <form id="login_form">
             <div
               class="mb-3 d-flex flex-column justify-content-center align-items-center"
+              style="height: 70vh"
             >
               <h1>please login</h1>
               <div
@@ -91,5 +92,24 @@
         </div>
       </div>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="about text-center">
+            <h5>About</h5>
+            <p>
+              register with your noroff student mail today and get 1000 credits
+              to bid on items. or put something up for auction.
+            </p>
+          </div>
+          <div class="contact text-center">
+            <h5>contact</h5>
+            <p>support@fake-auction.se</p>
+            <p>phone: 555-40-FAKE</p>
+          </div>
+        </div>
+        <p class="copyright text-center m-1">Copyright © 2022 Auction-bay</p>
+      </div>
+    </footer>
   </body>
 </html>
