--- a/singleItem.html
+++ b/singleItem.html
@@ -59,5 +59,24 @@
       </div>
       <div class="media d-flex flex-wrap justify-content-center align-items-center"></div>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="about text-center">
+            <h5>About</h5>
+            <p>
+              register with your noroff student mail today and get 1000 credits
+              to bid on items. or put something up for auction.
+            </p>
+          </div>
+          <div class="contact text-center">
+            <h5>contact</h5>
+            <p>support@fake-auction.se</p>
+            <p>phone: 555-40-FAKE</p>
+          </div>
+        </div>
+        <p class="copyright text-center m-1">Copyright © 2022 Auction-bay</p>
+      </div>
+    </footer>
   </body>
 </html>
