fixing bugs for git hub pages

--- a/createItem.html
+++ b/createItem.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="dist/css/custom.css" />
-    <script src="/js/index.mjs" type="module" defer></script>
+    <script src="./js/index.mjs" type="module" defer></script>
     <title>Document</title>
   </head>
   <body>
