--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <base href="." />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Auction-bay is a semester project witch is to make a auction site online.you can register with a stud.noroff mail. you get 1000 credits when you register and you can use them to bid on items. you can also put items up for auction and earn more credits."
+    />
+    <meta
+      name="keywords"
+      content="auction, items, bid, bids, bid's, item, bidder, seller, buy, auctioning, win, winning, credit, credits, listing, listings"
+    />
+    <meta name="author" content="Andreas Jakobsen" />
     <link rel="stylesheet" href="dist/css/custom.css" />
     <script src="./js/index.mjs" type="module" defer></script>
     <title>Document</title>
