--- a/updateItem.html
+++ b/updateItem.html
@@ -65,6 +65,8 @@
                 id="exampleInputEmail1"
                 aria-describedby="emailHelp"
               />
+              <label for="media" class="form-label">Media</label>
+              <input type="url" name="media" />
               <label for="description" class="form-label">Description</label>
               <textarea
                 name="description"
