--- a/register.html
+++ b/register.html
@@ -16,7 +16,7 @@
     <meta name="author" content="Andreas Jakobsen" />
     <link rel="stylesheet" href="dist/css/custom.css" />
     <script src="./js/index.mjs" type="module" defer></script>
-    <title>Document</title>
+    <title>Auction-bay | Register</title>
   </head>
   <body>
     <header>
