remove consol logs

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
           <form class="form-inline" id="searchForm">
             <input
               class="form-control mr-sm-2"
-              type="search"
+              name="search"
+              type="text"
               id="searchInput"
               placeholder="Search"
               aria-label="Search"
